[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Environment/LevelExit/LevelExitLift.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/LevelExit/LevelExitLift.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[node name="LevelExitLift" type="Node2D"]
script = ExtResource( 2 )

[node name="MovingPlatform" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="MovingPlatform"]
position = Vector2( 0, -4 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="MovingPlatform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/PlayerDetection"]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="MovingPlatform/PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
